{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 193,
  "lineage": "71f3ffe9-013a-004e-71fb-e359a40c740d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "web_ngw_eip",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09dfbb3c3e4e0cbe8",
            "association_id": "eipassoc-0963dd8f0e4f006b0",
            "domain": "vpc",
            "id": "eipalloc-09dfbb3c3e4e0cbe8",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0a623fe20fe4a87f4",
            "private_dns": "ip-10-0-2-187.eu-central-1.compute.internal",
            "private_ip": "10.0.2.187",
            "public_dns": "ec2-3-70-31-28.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.70.31.28",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_i",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "bh-1c_ec2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a485299eeb98b979",
            "arn": "arn:aws:ec2:eu-central-1:657026912035:instance/i-0f6f18251af667a8e",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "SSMec2",
            "id": "i-0f6f18251af667a8e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "admin_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e8eed2872948099b",
            "private_dns": "ip-10-0-2-110.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.110",
            "public_dns": "ec2-18-184-40-7.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.184.40.7",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00f61f39b6b8316ac",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b4b50e6ad0c46188",
            "tags": {
              "Name": "bh-1c_ec2"
            },
            "tags_all": {
              "Name": "bh-1c_ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d82fce136e5cc2df"
            ]
          },
          "dependencies": [
            "aws_key_pair.admin_key",
            "aws_security_group.sg",
            "aws_subnet.subnets",
            "aws_vpc.vpc",
            "data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": "ws-1a_ec2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bf34e885a84149e6",
            "arn": "arn:aws:ec2:eu-central-1:657026912035:instance/i-0d676755ad86deca8",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "EC2_Invoke_API",
            "id": "i-0d676755ad86deca8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "admin_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07be4b9b98703ce49",
            "private_dns": "ip-10-0-0-148.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.148",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09ec13917f71f3303",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d1b684c08d926599",
            "tags": {
              "Name": "ws-1a_ec2"
            },
            "tags_all": {
              "Name": "ws-1a_ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f4f606ea99502432"
            ]
          },
          "dependencies": [
            "aws_key_pair.admin_key",
            "aws_security_group.sg",
            "aws_subnet.subnets",
            "aws_vpc.vpc",
            "data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": "ws-1b_ec2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bf34e885a84149e6",
            "arn": "arn:aws:ec2:eu-central-1:657026912035:instance/i-0a192bb3b05333788",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "EC2_Invoke_API",
            "id": "i-0a192bb3b05333788",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "admin_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ed4d04d2e532a22e",
            "private_dns": "ip-10-0-1-56.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.56",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f321aab76ca41b7b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07c3fb6caf0ddbd78",
            "tags": {
              "Name": "ws-1b_ec2"
            },
            "tags_all": {
              "Name": "ws-1b_ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f4f606ea99502432"
            ]
          },
          "dependencies": [
            "aws_key_pair.admin_key",
            "aws_security_group.sg",
            "aws_subnet.subnets",
            "aws_vpc.vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "web_igw",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:657026912035:internet-gateway/igw-05da68675dd8fd0fe",
            "id": "igw-05da68675dd8fd0fe",
            "owner_id": "657026912035",
            "tags": {
              "Name": "web_igw"
            },
            "tags_all": {
              "Name": "web_igw"
            },
            "vpc_id": "vpc-058e2a423baf6f6f2"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:657026912035:loadbalancer/app/alb/4f9f7b4a860a343c",
            "arn_suffix": "app/alb/4f9f7b4a860a343c",
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-1281709159.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:657026912035:loadbalancer/app/alb/4f9f7b4a860a343c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d9dd9784f3cc0063"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08eba4676bc255c7e"
              },
              {
                "subnet_id": "subnet-0dce6fd73b5e52e87"
              }
            ],
            "subnets": [
              "subnet-08eba4676bc255c7e",
              "subnet-0dce6fd73b5e52e87"
            ],
            "vpc_id": "vpc-058e2a423baf6f6f2",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:657026912035:listener/app/alb/4f9f7b4a860a343c/377901c0c679a9c7",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:657026912035:targetgroup/alb-tg/d69189b680bd2aa3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:657026912035:listener/app/alb/4f9f7b4a860a343c/377901c0c679a9c7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:657026912035:loadbalancer/app/alb/4f9f7b4a860a343c",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.alb_tg",
            "aws_security_group.sg",
            "aws_subnet.subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:657026912035:targetgroup/alb-tg/d69189b680bd2aa3",
            "arn_suffix": "targetgroup/alb-tg/d69189b680bd2aa3",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:657026912035:targetgroup/alb-tg/d69189b680bd2aa3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-058e2a423baf6f6f2"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ws-1a_tg_attch",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:657026912035:targetgroup/alb-tg/d69189b680bd2aa3-20231120130600543800000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:657026912035:targetgroup/alb-tg/d69189b680bd2aa3",
            "target_id": "i-0d676755ad86deca8"
          },
          "dependencies": [
            "aws_instance.ec2_i",
            "aws_key_pair.admin_key",
            "aws_lb_target_group.alb_tg",
            "aws_security_group.sg",
            "aws_subnet.subnets",
            "aws_vpc.vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ws-1b_tg_attch",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:657026912035:targetgroup/alb-tg/d69189b680bd2aa3-20231120130600023500000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:657026912035:targetgroup/alb-tg/d69189b680bd2aa3",
            "target_id": "i-0a192bb3b05333788"
          },
          "dependencies": [
            "aws_instance.ec2_i",
            "aws_key_pair.admin_key",
            "aws_lb_target_group.alb_tg",
            "aws_security_group.sg",
            "aws_subnet.subnets",
            "aws_vpc.vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "rt_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "rds_main_rt",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c4cff43ed3be62c",
            "original_route_table_id": "rtb-08313f259bcb9ffaf",
            "route_table_id": "rtb-095b74f8b792abc11",
            "vpc_id": "vpc-0a563b7537cc2eb97"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw",
            "aws_route_table.rt",
            "aws_subnet.subnets",
            "aws_vpc.vpc",
            "aws_vpc_peering_connection.pcx"
          ]
        },
        {
          "index_key": "web_main_rt",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05879101805242c00",
            "original_route_table_id": "rtb-098de12f80ef03fb6",
            "route_table_id": "rtb-0bbe085b58f4bef1a",
            "vpc_id": "vpc-058e2a423baf6f6f2"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw",
            "aws_route_table.rt",
            "aws_subnet.subnets",
            "aws_vpc.vpc",
            "aws_vpc_peering_connection.pcx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "web_ngw",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09dfbb3c3e4e0cbe8",
            "association_id": "eipassoc-0963dd8f0e4f006b0",
            "connectivity_type": "public",
            "id": "nat-00e23224656d669b7",
            "network_interface_id": "eni-0a623fe20fe4a87f4",
            "private_ip": "10.0.2.187",
            "public_ip": "3.70.31.28",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b4b50e6ad0c46188",
            "tags": {
              "Name": "web_ngw"
            },
            "tags_all": {
              "Name": "web_ngw"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_subnet.subnets",
            "aws_vpc.vpc",
            "aws_vpc_peering_connection.pcx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "rds_rds_rt",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:657026912035:route-table/rtb-095b74f8b792abc11",
            "id": "rtb-095b74f8b792abc11",
            "owner_id": "657026912035",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "pcx-0b86bab4d6031a4d9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": null,
                "cidr_block": "172.16.0.0/24",
                "core_network_arn": null,
                "destination_prefix_list_id": null,
                "egress_only_gateway_id": null,
                "gateway_id": "local",
                "ipv6_cidr_block": null,
                "local_gateway_id": null,
                "nat_gateway_id": null,
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_endpoint_id": null,
                "vpc_peering_connection_id": null
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a563b7537cc2eb97"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw",
            "aws_subnet.subnets",
            "aws_vpc.vpc",
            "aws_vpc_peering_connection.pcx"
          ]
        },
        {
          "index_key": "web_alb_rt",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:657026912035:route-table/rtb-0e22cc512209b7a3b",
            "id": "rtb-0e22cc512209b7a3b",
            "owner_id": "657026912035",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05da68675dd8fd0fe",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-058e2a423baf6f6f2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw",
            "aws_subnet.subnets",
            "aws_vpc.vpc",
            "aws_vpc_peering_connection.pcx"
          ]
        },
        {
          "index_key": "web_bh_rt",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:657026912035:route-table/rtb-09d1cf12506892e5a",
            "id": "rtb-09d1cf12506892e5a",
            "owner_id": "657026912035",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-00e23224656d669b7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.16.0.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "pcx-0b86bab4d6031a4d9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": null,
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": null,
                "destination_prefix_list_id": null,
                "egress_only_gateway_id": null,
                "gateway_id": "local",
                "ipv6_cidr_block": null,
                "local_gateway_id": null,
                "nat_gateway_id": null,
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_endpoint_id": null,
                "vpc_peering_connection_id": null
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-058e2a423baf6f6f2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw",
            "aws_subnet.subnets",
            "aws_vpc.vpc",
            "aws_vpc_peering_connection.pcx"
          ]
        },
        {
          "index_key": "web_ws_rt",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:657026912035:route-table/rtb-0bbe085b58f4bef1a",
            "id": "rtb-0bbe085b58f4bef1a",
            "owner_id": "657026912035",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-00e23224656d669b7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.16.0.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "pcx-0b86bab4d6031a4d9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": null,
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": null,
                "destination_prefix_list_id": null,
                "egress_only_gateway_id": null,
                "gateway_id": "local",
                "ipv6_cidr_block": null,
                "local_gateway_id": null,
                "nat_gateway_id": null,
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_endpoint_id": null,
                "vpc_peering_connection_id": null
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-058e2a423baf6f6f2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw",
            "aws_subnet.subnets",
            "aws_vpc.vpc",
            "aws_vpc_peering_connection.pcx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_ex",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "web_alb1a_ex_rt",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0529f394750d165e3",
            "route_table_id": "rtb-0e22cc512209b7a3b",
            "subnet_id": "subnet-08eba4676bc255c7e"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw",
            "aws_route_table.rt",
            "aws_subnet.subnets",
            "aws_vpc.vpc",
            "aws_vpc_peering_connection.pcx"
          ]
        },
        {
          "index_key": "web_alb1b_ex_rt",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9e19b8deb3ad4dd",
            "route_table_id": "rtb-0e22cc512209b7a3b",
            "subnet_id": "subnet-0dce6fd73b5e52e87"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw",
            "aws_route_table.rt",
            "aws_subnet.subnets",
            "aws_vpc.vpc",
            "aws_vpc_peering_connection.pcx"
          ]
        },
        {
          "index_key": "web_bh1c_ex_rt",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e344509c5768077",
            "route_table_id": "rtb-09d1cf12506892e5a",
            "subnet_id": "subnet-0b4b50e6ad0c46188"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw",
            "aws_route_table.rt",
            "aws_subnet.subnets",
            "aws_vpc.vpc",
            "aws_vpc_peering_connection.pcx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "rds_rds_sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:657026912035:security-group/sg-00c411f36cb6a9b4f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00c411f36cb6a9b4f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20231107104453940500000001",
            "name_prefix": "terraform-",
            "owner_id": "657026912035",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a563b7537cc2eb97"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.subnets",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "web_alb_sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:657026912035:security-group/sg-0d9dd9784f3cc0063",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d9dd9784f3cc0063",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20231108152325154000000001",
            "name_prefix": "terraform-",
            "owner_id": "657026912035",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-058e2a423baf6f6f2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.subnets",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "web_bh_sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:657026912035:security-group/sg-0d82fce136e5cc2df",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d82fce136e5cc2df",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20231107104453941600000003",
            "name_prefix": "terraform-",
            "owner_id": "657026912035",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-058e2a423baf6f6f2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.subnets",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "web_ws_sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:657026912035:security-group/sg-0f4f606ea99502432",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f4f606ea99502432",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20231107104453942200000005",
            "name_prefix": "terraform-",
            "owner_id": "657026912035",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-058e2a423baf6f6f2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "rds_db-1a_subnet",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:657026912035:subnet/subnet-085a0fde7c3c576b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "172.16.0.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-085a0fde7c3c576b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "657026912035",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rds_db-1a_subnet"
            },
            "tags_all": {
              "Name": "rds_db-1a_subnet"
            },
            "vpc_id": "vpc-0a563b7537cc2eb97"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "rds_db-1b_subnet",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:657026912035:subnet/subnet-0c54828178d4e78c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "172.16.0.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c54828178d4e78c1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "657026912035",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rds_db-1b_subnet"
            },
            "tags_all": {
              "Name": "rds_db-1b_subnet"
            },
            "vpc_id": "vpc-0a563b7537cc2eb97"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "web_alb-1a_pub_subnet",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:657026912035:subnet/subnet-08eba4676bc255c7e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08eba4676bc255c7e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "657026912035",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web_alb-1a_pub_subnet"
            },
            "tags_all": {
              "Name": "web_alb-1a_pub_subnet"
            },
            "vpc_id": "vpc-058e2a423baf6f6f2"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "web_alb-1b_pub_subnet",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:657026912035:subnet/subnet-0dce6fd73b5e52e87",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dce6fd73b5e52e87",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "657026912035",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web_alb-1b_pub_subnet"
            },
            "tags_all": {
              "Name": "web_alb-1b_pub_subnet"
            },
            "vpc_id": "vpc-058e2a423baf6f6f2"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "web_bh-1c_pub_subnet",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:657026912035:subnet/subnet-0b4b50e6ad0c46188",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b4b50e6ad0c46188",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "657026912035",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web_bh-1c_pub_subnet"
            },
            "tags_all": {
              "Name": "web_bh-1c_pub_subnet"
            },
            "vpc_id": "vpc-058e2a423baf6f6f2"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "web_ws-1a_subnet",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:657026912035:subnet/subnet-0d1b684c08d926599",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d1b684c08d926599",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "657026912035",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web_ws-1a_subnet"
            },
            "tags_all": {
              "Name": "web_ws-1a_subnet"
            },
            "vpc_id": "vpc-058e2a423baf6f6f2"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "web_ws-1b_subnet",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:657026912035:subnet/subnet-07c3fb6caf0ddbd78",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07c3fb6caf0ddbd78",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "657026912035",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web_ws-1b_subnet"
            },
            "tags_all": {
              "Name": "web_ws-1b_subnet"
            },
            "vpc_id": "vpc-058e2a423baf6f6f2"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "rds",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:657026912035:vpc/vpc-0a563b7537cc2eb97",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/24",
            "default_network_acl_id": "acl-03a8b639e67e9920d",
            "default_route_table_id": "rtb-095b74f8b792abc11",
            "default_security_group_id": "sg-0aa2ac26c3df5b564",
            "dhcp_options_id": "dopt-0c4cfac5123cbc333",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a563b7537cc2eb97",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-095b74f8b792abc11",
            "owner_id": "657026912035",
            "tags": {
              "Name": "rds"
            },
            "tags_all": {
              "Name": "rds"
            }
          }
        },
        {
          "index_key": "web",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:657026912035:vpc/vpc-058e2a423baf6f6f2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09aa7db4b1ec5ecc3",
            "default_route_table_id": "rtb-0bbe085b58f4bef1a",
            "default_security_group_id": "sg-010678d4440a6fdd3",
            "dhcp_options_id": "dopt-0c4cfac5123cbc333",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-058e2a423baf6f6f2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bbe085b58f4bef1a",
            "owner_id": "657026912035",
            "tags": {
              "Name": "web"
            },
            "tags_all": {
              "Name": "web"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "pcx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "web_rds_pcx",
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "id": "pcx-0b86bab4d6031a4d9",
            "peer_owner_id": "657026912035",
            "peer_region": "eu-central-1",
            "peer_vpc_id": "vpc-058e2a423baf6f6f2",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "web_rds_pcx"
            },
            "tags_all": {
              "Name": "web_rds_pcx"
            },
            "vpc_id": "vpc-0a563b7537cc2eb97"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    }
  ]
}